# hcautomation

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
hcautomation/: __init__.py  helpers.py  lite_file_generator.xlsm  login_generator.py
