[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hcautomation"
version = "1.1.1"
description = "A Python package for automating LMG processes"
authors = [{ name = "Harshal", email = "hsarode04@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "numpy",
    "selenium",
    "rsa",
    "beautifulsoup4",
    "pywin32",
    "Jinja2"
]

[tool.setuptools]
packages = ["hcautomation"]
include-package-data = true

[tool.setuptools.package-data]
hcautomation = ["*.PEM"]